# FlappyBird

assets/: background.aseprite  duck.aseprite  level.aseprite  tunnel_end.aseprite  tunnel_line.aseprite
include/: game.h  global.h  render.h
src/: CMakeLists.txt  game.cpp  render.cpp
